fix: add z-index to hero list

--- a/src/assets/scss/components/hero-list.scss
+++ b/src/assets/scss/components/hero-list.scss
@@ -6,6 +6,7 @@
   position: absolute;
   bottom: 15px;
   right: 10px;
+  z-index: 2;
 }
 
 .hero__list-item {
