--- a/src/assets/scss/components/hero.scss
+++ b/src/assets/scss/components/hero.scss
@@ -30,7 +30,6 @@
 .hero__box {
   margin-top: -75px;
   position: relative;
-  z-index: -1;
 }
 
 @media screen and (max-width: $desktop-md) {
